# R-MABM

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: run-tests.yml
docs/source/: conf.py  index.rst  modules.rst  rmabm.agents.rst  rmabm.environments.rst  rmabm.rst
examples/: README.md  agent_training.py  heuristic_run.py
pycats/: __init__.py  logger.py  simulation.py
pycats/agents/: __init__.py  heuristic.py  qlearners.py
pycats/environments/: __init__.py  cats.py
rmabm/: __init__.py  logger.py  simulation.py
rmabm/agents/: heuristic.py  qlearners.py
rmabm/environments/: __init__.py  cats.py
tests/: test_agents.py  test_create_env.py  test_env.py  test_logger.py  test_simlation.py  test_simulation.py
tests/resources/: test_parameters.csv  test_parameters.json
