[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rmabm_brusa99"
version = "0.0.5"
authors = [
    { name = "Simone Brusatin", email = "simone.brusatin@gmail.com" },
]
description = "MARL interface for M-ABMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium",
    "juliacall",
    "numpy",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/Brusa99/R-MABM"
Issues = "https://github.com/Brusa99/R-MABM/issues"
